# pbreflect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  extractor.py  main.py  mypy.ini  pyproject.toml  recover.py
.github/workflows/: python-publish.yml  python-test.yml
example_clients/protos/: account_pb2.py  account_pb2.pyi  account_pb2_pbreflect.py
pbreflect/: __init__.py  log.py  main.py
pbreflect/pbgen/: errors.py  runner.py
pbreflect/pbgen/generators/: base.py  factory.py  protocols.py
pbreflect/pbgen/generators/strategies/: betterproto.py  default.py  dynamic.py  mypy.py  pbreflect.py  pbreflect_tests.py
pbreflect/pbgen/patchers/: directory_structure_patcher.py  import_patcher.py  init_file_patcher.py  mypy_patcher.py  patcher_protocol.py  pbreflect_patcher.py  proto_import_patcher.py
pbreflect/pbgen/plugins/: __init__.py  base.py  pbreflect_plugin.py  tests_plugin.py
pbreflect/pbgen/plugins/pbreflect/: __init__.py
pbreflect/pbgen/plugins/pbreflect/templates/: __init__.py  client.jinja2
pbreflect/pbgen/plugins/tests/: __init__.py  runner.py
pbreflect/pbgen/plugins/tests/templates/: conftest.jinja2  conftest_service.jinja2  test_method.jinja2  test_service.jinja2
pbreflect/pbgen/utils/: command.py  file_finder.py  format.py
pbreflect/plugin/: plugin.py
pbreflect/plugin/templates/: client.jinja2
pbreflect/protorecover/: __init__.py  proto_builder.py  recover_service.py  reflection_client.py
pgreflect/protorecover/: proto_builder.py  recover_service.py  reflection_client.py
plugin/: plugin.py
plugin/templates/: server.jinja2
templates/: client.jinja2  proto_template.proto.jinja2
tests/pbreflect/: test_log.py  test_main.py  test_utils.py
tests/pbreflect/pbgen/: test_runner.py
tests/pbreflect/pbgen/generators/: test_base.py  test_factory.py
tests/pbreflect/pbgen/generators/strategies/: test_strategies.py
tests/pbreflect/pbgen/patchers/: test_directory_structure_patcher.py  test_import_patcher.py  test_init_file_patcher.py  test_mypy_patcher.py  test_pb_reflect_patcher.py  test_proto_import_patcher.py
tests/pbreflect/pbgen/plugins/: test_base.py  test_pbreflect_plugin.py  test_tests_plugin.py
tests/pbreflect/pbgen/plugins/pbreflect/: test_pbreflect.py
tests/pbreflect/pbgen/plugins/tests/: test_runner.py  test_tests.py
tests/pbreflect/pbgen/utils/: test_command.py  test_file_finder.py  test_format.py
tests/pbreflect/protorecover/: test_proto_builder.py  test_recover_service.py  test_reflection_client.py
