[tool.poetry]
name = "pbreflect"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"
packages = [{ include = "pbreflect" }]

[tool.poetry.scripts]
pbreflect = "pbreflect.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.6"
grpcio-reflection = "^1.71.0"
pydantic = "^2.11.3"
grpcio-tools = "^1.71.0"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
