[tool.poetry]
name = "pbreflect"
version = "1.0.0"
description = "A tool for recovering Protocol Buffer definitions from gRPC services using reflection API and generating client code"
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ValeriyMenshikov/pbreflect"
keywords = ["grpc", "protobuf", "reflection", "proto", "protocol-buffers", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
packages = [{ include = "pbreflect" }]

[project.entry-points.console_scripts]
pbreflect = "pbreflect.main:cli"
protoc-gen-pbreflect = "pbreflect.pbgen.plugins.pbreflect_plugin:main"

[project.entry-points.protoc_gen_plugins]
pbreflect = "pbreflect.pbgen.plugins.pbreflect_plugin:main"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.6"
grpcio-reflection = "^1.71.0"
pydantic = "^2.11.3"
grpcio-tools = "^1.71.0"
click = "^8.1.8"
mypy-protobuf = ">=3.6.0"
grpcio = "^1.71.0"
betterproto = "^1.2.5"
grpc-stubs = "^1.53.0.6"
protobuf = "^5.0.0"
types-protobuf = "^4.24.0.20240311"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
mypy = "^1.15.0"
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pbreflect"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
