[project]
name = "pbreflect"
version = "1.1.2"
description = "A tool for recovering Protocol Buffer definitions from gRPC services using reflection API and generating client code"
authors = [{ name = "Menshikov Valeriy Sergeevich", email = "vmenshikov@ozon.ru" }]
requires-python = ">=3.11, <4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "grpc",
    "protobuf",
    "reflection",
    "proto",
    "protocol-buffers",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jinja2>=3.1.6",
    "grpcio-reflection>=1.71.0",
    "pydantic>=2.11.3",
    "grpcio-tools>=1.71.0",
    "click>=8.1.8",
    "mypy-protobuf>=5.0.0",
    "grpcio>=1.71.0",
    "grpc-stubs>=1.53.0.6",
    "protobuf>=6.32.0",
    "types-protobuf>=6.0.0",
    "pydantic-settings>=2.9.1",
    "loguru>=0.7.3",
    "ruff>=0.11.7",
]

[project.optional-dependencies]
betterproto = [
    "betterproto==2.0.0b7",
]

[project.urls]
Repository = "https://github.com/ValeriyMenshikov/pbreflect"

[project.scripts]
pbreflect = "pbreflect.main:cli"
protoc-gen-pbreflect = "pbreflect.pbgen.plugins.pbreflect_plugin:main"

[project.entry-points.protoc_gen_plugins]
pbreflect = "pbreflect.pbgen.plugins.pbreflect_plugin:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2",
    "pytest>=8.0.0,<9",
    "black>=24.0.0,<25",
    "isort>=5.13.0,<6",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["pbreflect"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["N", "B", "A", "E", "W", "F", "ASYNC", "S", "D", "I"]
ignore = [
  "PT001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D107",
  "D104",
  "W293",
  "S101",
  "D212",
  "D200",
  "UP007",
  "S105",
  "S311",
  "S106",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
known-first-party = ["pbreflect"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
